# sware-server

./: .gitignore  Cargo.toml  README.md
data/: product-list-tor  reports  reports-empty  reports-missing-fields  reports-other-none  reports-single  reports-updates
data/products/: afd-mpx  ffw  ffw-with-full-lon  lsr-downburst  lsr-flash-flood  lsr-flood  lsr-flood-2  lsr-funnel  lsr-hail-funnel  lsr-hail-remarks  lsr-hail-unknown  lsr-heavy-rain  lsr-lightning  lsr-marine-wind  lsr-marine-wind-2  lsr-multiple-heavy-rain  lsr-no-ands  lsr-non-tstm  lsr-non-tstm-dmg  lsr-summary  lsr-tornado  lsr-tornado-old  lsr-tstm-dmg  lsr-tstm-wind  lsr-waterspout  lsr-wildfire  lsr-wind-dmg  lsr-wind-dmg-2  pts-d48  pts-dy2  pts-dy3  pts-mdt-dy1  pts-sig-tor  pts-two-sections.dy1  sel-svr-watch  sel-svr-watch-cancelled  sel-tor-pds-watch  sel-tor-watch-cancelled  sel-tor-watch-issued  sev-no-watches  (+31 more)
data/products/types/: tor
docs/adr/: 0000-template.md
domain/: Cargo.toml
domain/src/: lib.rs  optimized.rs
parsers/: Cargo.toml  README.md
parsers/src/: afd_parser.rs  ffw_parser.rs  lib.rs  lsr_parser.rs  nws_parser.rs  nws_regexes.rs  parser_util.rs  sel_parser.rs  sn_parser.rs  svr_parser.rs  svs_parser.rs  swo_parser.rs  test_util.rs  tor_parser.rs
src/: http_client.rs  main.rs  nws_loader.rs  sn_loader.rs  store.rs
util/: Cargo.toml
util/src/: lib.rs
