[package]
name = "sware-server"
version = "0.1.0"
authors = ["Rob Hurkes <rhurkes@gmail.com>"]
edition = "2018"

[workspace]
members = [ "domain", "parsers", "util" ]

[dependencies]
domain = { path = "domain" }
parsers = { path = "parsers" }
util = { path = "./util" }
bincode = "1.2.1"
chrono = "0.4"
fnv = "1.0.6"
lazy_static = "1.4.0"
log = "0.4"
env_logger = "0.7.1"
regex = "1.3"
reqwest = { version = "0.10", features = ["blocking", "json"] }
rocksdb = { version = "0.13.0", default-features = false, features = ["lz4"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
