[package]
name = "parsers"
version = "0.1.0"
authors = ["Rob Hurkes <rhurkes@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
domain = { path = "../domain" }
util = { path = "../util" }
lazy_static = "1.4.0"
log = "0.4"
env_logger = "0.7.1"
regex = "1.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
